--- a/소통협력센터/resource/css/ui.css
+++ b/소통협력센터/resource/css/ui.css
@@ -274,7 +274,7 @@ footer .foot-menu-wrap .inner {display:flex;}
 footer .foot-menu {flex-basis:50%;}
 footer .foot-menu li {display: inline-block; padding-top:.3rem; margin-right:2rem;}
 footer .foot-menu li a {display:block; height:4.2rem; line-height:4.2rem; font-weight:700;}
-footer .foot-menu li a strong {color:#000}
+footer .foot-menu li a strong {color:#33990b}
 footer .link-wrap {flex-basis:50%; text-align:right;}
 footer .link-wrap > span {display:inline-block; vertical-align:top;} 
 footer .link-wrap .select { height:4.2rem; padding-top:0.4rem; position:relative; width:31.3rem; text-align:left; } 
