--- a/소통협력센터/resource/css/ui.css
+++ b/소통협력센터/resource/css/ui.css
@@ -261,7 +261,7 @@ header .allmenu-wrap .all-depth02 li a { display:block; line-height:5rem; height
 header .allmenu-wrap .all-depth02 li a:hover {color:#e7325c; text-decoration:underline;}
 header .allmenu-wrap .all-close { position:absolute; right:.7rem; top:6em; width:3rem; height:3rem;; background:#fff; background:url('../img/icon_main.png') no-repeat -26.6rem -7.2rem;}
 
-footer {position:relative; width:100%; height:36.4rem; border-top:1px solid #e8e8e8; }
+footer {position:relative; width:100%;  border-top:1px solid #e8e8e8; }
 footer .inner {position:relative; max-width:128rem; padding:0 1rem; margin:0 auto;}
 footer * {font-size:1.6rem;}
 footer .foot-banner-wrap { border-bottom:1px solid #e8e8e8; height:9.9rem; padding-top:2.5rem;}
@@ -319,15 +319,16 @@ footer .foot-info .inner p span:not(:last-child):after { content:"|"; display:in
 .tag-wrap mark {display:block;  position:absolute; left:2rem; top:1rem;  width:6rem; height:4rem; line-height:4rem; padding-left:1.2rem; color:#fff; font-size:1.4rem; font-weight:900; background:url('../img/icon_main.png') no-repeat -41.2rem 0;}
 .tag-wrap button { height:4.5rem; padding:0 1.5rem; background:#f2f2f2; border-radius:.5rem; margin-left:.8rem; margin-bottom:1rem; font-size:1.6rem;} 
 /* --- 목록 > 카드 형--- */
-.card-list { display:flex; flex-wrap: wrap; justify-content:space-around; margin:0 -1rem 2rem}
+.card-list { display:flex; flex-wrap: wrap; justify-content: space-around; margin:0 -1rem 2rem}
 .card-list li { position:relative; width:29.8rem; margin-bottom:4rem; border-radius:1.5rem; background:#fff; border:1px solid #ddd } 
 .card-list li:hover {box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.1); }  
 .card-list li a {display:block; height:47.8rem;}
-.card-list li a .img {display:block; height:30rem; overflow: hidden; }
-.card-list li a .img img { font-size:0; width:100%; }
+.card-list li a .img {display:block;  height:29.8rem; overflow: hidden; position: relative; z-index:1;}
+.card-list li a i {display:block; position:absolute; right:0; bottom:0; width:6rem; height:6rem; line-height:6rem; text-align:center; color:#fff; font-size:1.6rem; font-weight:700; background:rgba(0, 0, 0, .7); }
+.card-list li a .img img { font-size:0; width:100%; height:100%; display:block; }
 .card-list li a .tit {display:block; font-size:2.4rem; font-weight:700; padding:2.7rem 3rem 0; height:11.1rem; overflow: hidden;}
 .card-list li a .date {display:block; position:absolute; left:3rem; bottom:2.7rem; font-size:1.6rem;} 
-
+ 
 .data-none {text-align:center; padding:8rem 0;  margin-bottom:6rem; border:1px solid #ddd; border-radius:1.5rem;} 
 .data-none p {display:inline-block; font-size:1.8rem; font-weight:700; padding-top:12.8rem; background:  url('../img/icon_sub.png') no-repeat 50% 0 }
 li.data-none {border-width:0 0 1px;  border-radius:0;}
@@ -360,7 +361,7 @@ li.data-none {border-width:0 0 1px;  border-radius:0;}
 .date-wrap span + span:before { content:"|"; display:inline-block; color:#ccc; padding-right:1.5rem} 
 /* --- 버튼 --- */
 .btn-wrap { text-align:center; margin-top:4rem;}
-.btn-wrap .btn-comm {display:inline-block; min-width:14rem; height:5.8rem; border-radius:.5rem; border:2px solid #999; padding:1.5rem 3rem; margin:0 .4rem}
+.btn-wrap .btn-comm {display:inline-block; min-width:14rem; height:5.8rem; border-radius:.5rem; border:2px solid #999; padding:1.5rem 3rem; margin:0 .4rem; vertical-align:top;}
 .btn-wrap .btn-comm i {display:inline-block; font-size:1.8rem; font-weight:700; letter-spacing:-1px; }
 .btn-wrap .btn-comm.red { border:2px solid #e7355c; background:#e7355c; color:#fff;}
 
@@ -423,7 +424,7 @@ li.data-none {border-width:0 0 1px;  border-radius:0;}
 .news-wrap .inner .swiper-slide a {display:block; height:47.8rem;}
 .news-wrap .inner .swiper-slide a .img {display:block;  height:29.8rem; overflow: hidden; position: relative; z-index:1 ;}
 .news-wrap .inner .swiper-slide a .img i {display:block; position:absolute; right:0; bottom:0; width:6rem; height:6rem; line-height:6rem; text-align:center; color:#fff; font-size:1.6rem; font-weight:700; background:rgba(0, 0, 0, .7); }
-.news-wrap .inner .swiper-slide a .img img { font-size:0; width:100%; display:block; }
+.news-wrap .inner .swiper-slide a .img img { font-size:0; width:100%; height:100%; display:block; }
 .news-wrap .inner .swiper-slide a .tit {display:block; font-size:2.4rem; font-weight:700; padding:2.7rem 3rem 0; height:11.1rem; overflow: hidden;}
 .news-wrap .inner .swiper-slide a .date {display:block; position:absolute; left:3rem; bottom:2.7rem; font-size:1.6rem;} 
 .news-wrap .inner .news-swiper .swiper-button-prev {margin-top:-4rem; left:0; width:6rem; height:6rem; opacity:1; background:url('../img/icon_main.png') no-repeat 0 -19.4rem;}
@@ -523,13 +524,20 @@ li.data-none {border-width:0 0 1px;  border-radius:0;}
 
 .pg-sub .notice-list li a .txt-area {flex-grow: 1;} 
 .pg-sub .notice-list li a .txt-area p {display:flex; align-items:center; } 
-.pg-sub .notice-list li a .txt-area p i{width:16.5rem; flex-shrink:0; text-align:center; font-size:4.2rem; font-weight:700; min-height:8rem; line-height:8rem; border-right:1px solid #f8f8f8;} 
-.pg-sub .notice-list li a .txt-area p span{flex-grow: 1; padding:0 4rem; } 
-.pg-sub .notice-list li a .txt-area p span strong {display:block; font-size:2.6rem; font-weight:700;}
-.pg-sub .notice-list li a .txt-area p span em {display:block; font-size:1.6rem; margin-top:1.5rem;}
+.pg-sub .notice-list li a .txt-area p .num{width:16.5rem; flex-shrink:0; text-align:center; font-size:4.2rem; font-weight:700; min-height:8rem; line-height:8rem; border-right:1px solid #f8f8f8;} 
+.pg-sub .notice-list li a .txt-area p .txt{flex-grow: 1; padding:0 4rem; } 
+.pg-sub .notice-list li a .txt-area p .txt strong {display:block; font-size:2.6rem; font-weight:700;}
+.pg-sub .notice-list li a .txt-area p .txt em {display:block; font-size:1.6rem; margin-top:1.5rem;}
 .pg-sub .notice-list li a .date {width:10rem; flex-shrink:0; text-align:center; font-size:1.6rem;}
 .pg-sub .notice-list li a .hit {width:9rem; flex-shrink:0; text-align:center;  font-size:1.6rem; margin-left:2rem;}  
- 
+
+
+/* --- 참여안내 --- */
+.pg-sub .info-txt-box { font-size:2rem; text-align:center; background:#f8f8f8; border:1px solid #eee; padding:3rem; width: 96rem; margin: 2rem auto 0;}
+.inner-write { width: 96rem; margin: 0 auto 0;}
+.inner-write h3 {font-weight:700; font-size:2.8rem; margin-bottom:2rem;} 
+.inner-write .report-write + h3 { margin-top:5.5rem;}
+
 /* --- 블로그 목록 --- */
 .pg-sub .commun-list { border-top:2px solid #cacaca; margin-bottom:6rem;}
 .pg-sub .commun-list li{ position: relative; border-bottom:1px solid #ddd; padding:4rem} 
@@ -596,12 +604,29 @@ li.data-none {border-width:0 0 1px;  border-radius:0;}
 .view-head .share-wrap button.btn-share {background-position: .5rem 0;}
 .view-head .share-wrap button.btn-print {background-position: -5.1rem 0; margin-left:1.6rem; }
 .view-head .share-wrap button.btn-link {background-position: -11.4rem 0; margin-left:2rem; }
+
+.view-head-wrap {overflow: hidden; border-bottom:2px solid #cacaca; padding-bottom:6rem; margin-bottom:6rem; position: relative;}
+.view-head-wrap .img-area { float:left; width:35.5%; position:relative; border:1px solid #ddd; font-size:0;}
+.view-head-wrap .img-area i {display:block; position:absolute; right:0; bottom:0; width:10rem; height:10rem; line-height:10rem; text-align:center; color:#fff; font-size:2.2rem; font-weight:700; background:rgba(0, 0, 0, .7); }
+
+.view-head-wrap .view-head { float:right; width:64.5%; border:0; padding: 0 0 0 4rem}
+.view-head-wrap .view-head h3 { padding-right:18rem;}
+.view-head-wrap .view-head .state-list {display:flex;  border-bottom:1px solid #eee; border-top:1px solid #eee; }
+.view-head-wrap .view-head .state-list ul {flex-grow:1; padding:2.5rem 2.5rem 1rem;}
+.view-head-wrap .view-head .state-list ul li { font-size:1.6rem; margin-bottom:1.5rem;}
+.view-head-wrap .view-head .state-list ul li span:first-child { display:inline-block; width:10.8rem; color:#666;}
+.view-head-wrap .view-head .state-list ul li span:last-child {font-weight:700;}
+.view-head-wrap .view-head .state-list .state {flex-shrink:0; width:21rem; padding-top:12.5rem; background:#e7355c; font-size:1.8rem; font-weight:700; text-align:center; color:#fff; line-height:130%;}
+.view-head-wrap .view-head .state-list .state.end {padding-top:10rem; background:#f8f8f8; color:#e7355c;}
+.view-head-wrap .btn-wrap { position:absolute; bottom:6rem; right:0;}
+
 .view-body { border-bottom:1px solid #ccc; padding-bottom:4rem;}
-.view-body .view-cont { margin-bottom:4rem; border-bottom:1px solid #eee; padding:0 4rem 4rem; font-size:1.6rem; color:#666; line-height:150%;}
+.view-body .view-cont { padding:0 4rem 4rem; font-size:1.6rem; color:#666; line-height:150%;}
 .view-body .view-cont p:not(:last-child) {margin-bottom:2rem;}
-.view-body .view-cont p img {max-width:100%;}
-.view-body .tag-wrap {padding-top:0; width:60.5rem; padding-left:7rem;}
-.view-body .tag-wrap mark {top:0; left:0;}
+.view-body .view-cont p.img {text-align:center;}
+.view-body .view-cont p.img img {max-width:100%;}
+.view-body .tag-wrap {padding-top:0; width:100%; padding-left:7rem; padding-top:4rem; border-top:1px solid #eee;}
+.view-body .tag-wrap mark {top:4rem; left:0;}
 .view-body .tag-wrap button {margin-bottom:0; background:#fff; color:#666; font-size:1.6rem; letter-spacing:-1px; border:2px solid #f3f3f3; border-radius:.5rem;}
 
 .prev-next-wrap { background:#f8f8f8; padding:3.5rem 2rem; margin-top:4rem; display:flex; align-items:center; justify-content: space-between; font-size:1.8rem; letter-spacing:-1px; }
@@ -618,9 +643,11 @@ li.data-none {border-width:0 0 1px;  border-radius:0;}
 .report-write {overflow: hidden; width:96rem; margin:0 auto; border-top:2px solid #4a5765; border-bottom:1px solid #4a5765;}
 .report-write  dl * { font-size:1.6rem;} 
 .report-write  dt{ width:16%; height:6.4rem; font-weight:700; float:left; padding:2rem 2rem 0; text-align:center; border-bottom:1px solid #ddd; position:relative;}
-.report-write  dd{ width:84%; height:6.4rem;; float:left; padding:1rem 2rem; border-bottom:1px solid #ddd; border-left:1px solid #ddd; position:relative;}
-.report-write  dd.write {width:100%; border-left:0; height:27rem;}
+.report-write  dd{ width:84%; height:6.4rem; float:left; padding:1rem 2rem; border-bottom:1px solid #ddd; border-left:1px solid #ddd; position:relative;}
+.report-write  dd.write {width:100%; border-left:0; height:27rem;} 
 .report-write  dd.write textarea{ border:1px solid #ccc; width:99%; border-radius:.5rem; height:25rem; padding:1.5rem; overflow-y:scroll;}
+.report-write  dd.write-type02 { height:17rem;}
+.report-write  dd.write-type02 textarea{ border:1px solid #ccc; width:99%; border-radius:.5rem; height:15rem; padding:1.5rem; overflow-y:scroll;}
 .report-write  dt.file,
 .report-write  dd.file { border-bottom:0; height:11.4rem;}  
 .report-write  dt:last-of-type,
@@ -628,8 +655,8 @@ li.data-none {border-width:0 0 1px;  border-radius:0;}
 .report-write  dd.file p { color:#666; margin-top:1.5rem;}
 .report-write  dl select { height:4.5rem; width:37rem;}
 .report-write  dl input[type="text"],.report-write  dl input[type="password"],.report-write  dl input[type="tel"] { height:4.5rem; width:99%;}
-.report-write  dl input.wid50 { width:50%!important;}
-.report-write  dl input.wid13 { width:13%!important;}
+.report-write  dl .wid50 { width:50%!important;}
+.report-write  dl .wid13 { width:13%!important;}
 .report-write  dd.file input[type="file"] {position:absolute; width:0; height:0; padding:0; overflow:hidden; border: 0;} 
 .report-write  dd.file label {display:block; position:absolute; right:0; top:1rem; width:12.4rem; height:4.5rem; line-height:4.5rem; text-align:center; color:#fff; background-color:#8a8a8a; cursor:pointer;  border-radius:.5rem;}
 .report-write  dd.file .file-name { width:66.2rem;} 
@@ -638,6 +665,8 @@ li.data-none {border-width:0 0 1px;  border-radius:0;}
 .report-write  dd.file .file-focus {outline:1px dotted #ccc;} 
 .report-write  dd.email p {margin-right:11rem;}
 .report-write  dd.email button { position: absolute; right:0; top:1rem; width:12.4rem; height:4.5rem; color: #fff; background-color: #8a8a8a; cursor: pointer;border-radius: .5rem;}
+
+.report-write  .viwe-type dd span {display:block; height:4.4rem; line-height:4.4rem;}
 
 /* --- 회원가입 --- */ 
 .agree-box h3{font-size:2.8rem; margin-bottom:2rem;}
@@ -846,6 +875,22 @@ li.data-none {border-width:0 0 1px;  border-radius:0;}
     .newsletter-wrap .inner [class*="btn-news"] a:before {content:""; position:absolute; left:2rem; top:50%;height:9.7rem; width:9.7rem; margin-top:-4.8rem; background:url('../img/icon_main.png') no-repeat 0 -6.9rem;}
     .newsletter-wrap .inner [class*="btn-news"] a:after {content:""; position:absolute; right:2rem; top:50%; height:3rem; width:3rem; margin-top:-1.5rem; background:url('../img/icon_main.png') no-repeat -20.6rem -6.9rem;}
 
+    
+    .pg-sub .notice-list { border-top:2px solid #cacaca; margin-bottom:6rem;}
+    .pg-sub .notice-list li{  } 
+    .pg-sub .notice-list li a {display:block; padding:3rem 6rem 3rem 12rem;} 
+    .pg-sub .notice-list li a:after{ right:2rem; }
+ 
+
+    .pg-sub .notice-list li a .txt-area { } 
+    .pg-sub .notice-list li a .txt-area p {display:block; margin-bottom:2rem; } 
+    .pg-sub .notice-list li a .txt-area p .num{ display:flex; position:absolute; left:0; top:2rem; bottom:2rem; width:10rem; font-size:4.2rem; min-height:auto; line-height:normal; } 
+    .pg-sub .notice-list li a .txt-area p .num i { align-self:center; width:10rem; } 
+    .pg-sub .notice-list li a .txt-area p .txt{  padding:0 } 
+    .pg-sub .notice-list li a .txt-area p .txt strong {display:block; font-size:2.6rem; font-weight:700;}
+    .pg-sub .notice-list li a .txt-area p .txt em {display:block; font-size:1.6rem; margin-top:1.5rem;}
+    .pg-sub .notice-list li a .date {width:10rem; flex-shrink:0; text-align:center; font-size:1.6rem;}
+    .pg-sub .notice-list li a .hit {width:9rem; flex-shrink:0; text-align:center;  font-size:1.6rem; margin-left:2rem;}  
 }
 
  
