--- a/jsstudy/style.css
+++ b/jsstudy/style.css
@@ -37,7 +37,7 @@
 }
 
 
-/* 회원가입 약관동의 */
+/* 회원가입 약관동의 *//* 회원가입 약관동의 */
 .xans-member-join .ec-base-chk { display:inline-block; position:relative; margin:0 8px 0 0; width:24px; height:24px; vertical-align:top; cursor:pointer; }
 /*
 익스 낮은 버전에 사용
