--- a/DX-Portal/works/css/ui.css
+++ b/DX-Portal/works/css/ui.css
@@ -226,7 +226,7 @@ footer {height:3.8rem; margin-top: auto; line-height:3.8rem; background:#f7f7fa;
 [class*="thumb-case"] .cont-area .lv-wrap em {font-weight:800;}
 [class*="thumb-case"] .cont-area .lv-wrap span {padding-left:.6rem; margin-left:.6rem; border-left:1px solid #d3d3d3;}
 [class*="thumb-case"] .cont-area p {margin-top:.8rem; font-weight:800; font-size:1.6rem; line-height: 1.5; overflow:hidden; text-overflow:ellipsis; display:-webkit-box; -webkit-line-clamp:2; -webkit-box-orient:vertical;}
-[class*="thumb-case"] .cont-area .tag {position:absolute; left:0; width:100%; bottom:1.8rem; padding-left:1.4rem;}
+[class*="thumb-case"] .cont-area .tag {position:absolute; left:0; width:100%; bottom:1.8rem; padding-left:1.4rem; height:3.6rem; overflow: hidden;;}
 [class*="thumb-case"] .cont-area .tag .item {width:auto!important;}
 [class*="thumb-case"] .cont-area .tag  button { height:3.6rem; padding:.9rem 1.4rem .8rem; border-radius:.3rem; border:solid 1px #f1f1f4; background:#f7f7fa;} 
 
@@ -339,4 +339,5 @@ footer {height:3.8rem; margin-top: auto; line-height:3.8rem; background:#f7f7fa;
     *::-ms-backdrop, .swiper-button-wrap {position:absolute; top:-2rem;} 
     *::-ms-backdrop, .video-watching .in-box .text-wrap > p {height:5rem; }
     *::-ms-backdrop, [class*="thumb-case"] .cont-area p { height:5rem; }
+    *::-ms-backdrop, .tagSwiper .swiper-button-next {  top:-.5rem}
 }
