--- a/DX-Portal/works/css/conts.css
+++ b/DX-Portal/works/css/conts.css
@@ -4,8 +4,8 @@
 .container.sub:after {content:""; position:absolute; left:0; top:0; width:100%; height:26rem; box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.05); background: #a50034;} 
 .container.sub h2 { font-weight:600; font-size:2.8rem; line-height:1.07; margin-bottom:2.2rem; letter-spacing: -1.4px; color: #fff;}
 .container.sub h3 {padding-left:1.5rem; font-size:2.4rem; margin-bottom:2rem; height:2.4rem; line-height:2.4rem; border-left:5px solid #a30033}
-.contents-wrap {height:100%; max-width:186rem; margin:0 auto; padding:3.8rem 0 8rem; position:relative; z-index: 2;} 
-.contents-wrap .conts-in-box {height:100%; min-width:140rem; margin:0 1rem; padding:4rem 3rem 5.5rem 3rem; border-radius:2rem; border: solid 1px #d6d6e3; box-shadow: 0 30px 30px 0 rgba(0, 0, 0, 0.02); background-color:#fff;}
+.contents-wrap {height:100%; min-width:140rem; max-width:186rem; margin:0 auto; padding:3.8rem 0 8rem; position:relative; z-index: 2;} 
+.contents-wrap .conts-in-box {height:100%; margin:0 1rem; padding:4rem 3rem 5.5rem 3rem; border-radius:2rem; border: solid 1px #d6d6e3; box-shadow: 0 30px 30px 0 rgba(0, 0, 0, 0.02); background-color:#fff;}
 .contents-wrap .conts-in-box h3 {margin-bottom:3.7rem;}
 .h-title-wrap {display:flex; flex-wrap:wrap; justify-content:space-between;}
 .rowtable + h3,
@@ -13,8 +13,9 @@
 .req-text {height:5rem; font-size:1.4rem; padding-top:1rem;}
 .req-text em {color:#a50034;}
 
+
 /* --- 유형선택 --- */
-.contents-wrap.type-selection { width:120rem;}
+.contents-wrap.type-selection { max-width:120rem; min-width:120rem; }
 .contents-wrap.type-selection > h2 {color:#fff} 
 .search-reault {font-size:2rem; margin-bottom:3.2rem;}
 .search-reault strong {color:#a50034;}
@@ -62,6 +63,8 @@
 .result-list li.video a .img-area span {flex-shrink:0; width:100%; font-size:1.2rem; color:#fff; position: relative; z-index: 2;}
 .result-list li.video a .img-area b { flex-shrink:0; width:100%; font-size:2.2rem; margin-top:.5rem; font-weight:800; color:#fff; position: relative; z-index: 2;}
 
+.no-result {display:flex; flex-wrap:wrap; align-items:center; justify-content: center; border:1px solid #ccc; padding:5rem; font-size:1.6rem; border-radius:1rem;}
+
 /* --- tab --- */
 .tab-wrap {display:flex; flex-wrap:wrap; align-items:center; height:5rem; margin-bottom:4rem; overflow: hidden;} 
 .tab-wrap li{flex:1; display:flex; align-items:center; height:5rem; border:solid 1px #e4e4eb; border-bottom:solid 1px #222; background-color:rgba(0, 0, 0, 0.05);}
@@ -108,8 +111,7 @@ a.btn-common { line-height:3.5rem; padding:0 2rem;}
 .btn-sort{text-indent:-999px; overflow:hidden; width:2rem; height:3.4rem; background:url('../images/icon_sort.png') no-repeat 50% 50%;} 
 
 /* --- table --- */
- .table-wrap { /* height: calc(100% - (6rem + 5.5rem));*/ } 
-.tableList{  }
+ .table-wrap { /* height: calc(100% - (6rem + 5.5rem));*/ }  
 .tableList table {width:100%;border-spacing:0; border-collapse:collapse; table-layout:fixed; width:100%; }
 .tableList thead th { font-size:1.4rem; padding:1.2rem 1rem; height:5.8rem; background:#f9f9f9; font-weight:800; border-top:1px solid #222; border-bottom:1px solid #d6d6e3; vertical-align:middle;}
 .tableList tbody th { font-size:1.4rem; background: #f7f7fa; border-bottom:1px solid #d6d6e3;}
@@ -118,12 +120,12 @@ a.btn-common { line-height:3.5rem; padding:0 2rem;}
 .tableList tbody td a { display:block; width:100%; font-size:1.4rem; white-space:nowrap; text-overflow: ellipsis; overflow: hidden; color:#62740a; text-decoration:underline; }
 .tableList tbody tr td.left{text-align:left;} 
 .tableList thead tr th .btn-sort{ vertical-align: middle;} 
-
+.tableList tbody tr:hover td {background-color:#fefaf8;}
 .rowtable{ margin-bottom:1rem;}
 .rowtable table {width:100%; position:relative; border-spacing:0; border-collapse:collapse;  table-layout:fixed; width:100%; }
 .rowtable th { font-size:1.4rem; background-color:#f7f7fa; padding:1.2rem 2rem; height:5.8rem; font-weight:800; text-align:left; border-top:1px solid #222; font-weight:bold; border-bottom:1px solid #d6d6e3; } 
 .rowtable th.first {background:#f1f1f7; border-right:1px solid #d6d6e3;}  
-.rowtable td { font-size:1.4rem; border-top:1px solid #222; border-bottom:1px solid #d6d6e3; padding:1.2rem 1rem; height:5.8rem; vertical-align:middle;} 
+.rowtable td {line-height:150%; font-size:1.4rem; border-top:1px solid #222; border-bottom:1px solid #d6d6e3; padding:1.2rem 1rem; height:5.8rem; vertical-align:middle;} 
 .rowtable td input[type="text"] {width:100%;}
 .rowtable td select {width:100%; height:3.4rem;} 
 .rowtable td .ui-selectmenu-button.ui-button,
@@ -139,14 +141,18 @@ a.btn-common { line-height:3.5rem; padding:0 2rem;}
 .rowtable td .file-upload input { max-width:96rem;}
 .rowtable td .file-upload button {margin-left:.5rem}
 .rowtable td .file-name {margin-top:1rem}
-.rowtable td .result-text {margin-top:1.5rem}
- input.error { border:solid 1px #a50034!important}
- input.error:focus ~ .tooltip {display:block;}
+
+.file-add-list {display:flex; flex-wrap:wrap; justify-content:flex-start; margin-top:1rem; }
+.file-add-list li { flex-shrink:0; flex-grow:0; margin-right:4rem; line-height:1;margin-top:1rem}
+.file-add-list li a { letter-spacing:-0.35px; color:#62740a; text-decoration:underline; margin-right:.2rem;}
+.file-add-list li button { height:1.5rem; width:1.5rem; background: url('../images/icon_file_close.png') no-repeat 50% 50%; text-indent:-999px; overflow:hidden;;}
 
 .input-wrap {position:relative;}
 .input-wrap .tooltip {display:none;z-index:4; position:absolute; top:4.5rem; left:0; border-radius:.3rem; background:#191a1a url('../images/icon_tooltip.png') no-repeat 1.4rem 50%; color:#fff; font-size:1.4rem; padding:.9rem 1.5rem .8rem 3.4rem;}
 .input-wrap .tooltip:before {content:""; position:absolute; top:-.4rem; left:1rem; background:#191a1a; width:.7rem; height:.7rem; transform: translate(0, 0) rotate(135deg);}
- 
+.input-wrap input.error { border:solid 1px #a50034!important}
+.input-wrap input.error:focus ~ .tooltip {display:block;}
+
 .select-wrap {width:100%; display: inline-block; margin-right:1.5rem;}   
 .multiple-select-wrap .SumoSelect { width:100%;}
 .multiple-select-wrap .SumoSelect>.CaptionCont {width:100%; line-height:3.4rem; height:3.4rem; border-radius: .4rem; margin: 0; padding: 0 1rem; border: solid 1px #d6d6e3; box-shadow: 0 2px 4px 0 rgb(0 0 0 / 4%);}
