--- a/DX-Portal/works/css/ui.css
+++ b/DX-Portal/works/css/ui.css
@@ -137,7 +137,7 @@ header .inner h1 a { display:block; font-weight:400; line-height: 1.25; color:#0
 header .inner h1 a em {font-weight:800; color:#a50034;}
 header .head-info { background:#23232f;} 
 header .head-info .inner { width:120rem; height:4.6rem; margin:0 auto; display:flex; align-items:center; justify-content:space-between; flex-wrap:wrap;} 
-header .head-info .inner span.family-menu {display:flex;border-right:1px solid rgba(255,255,255,.2)}
+header .head-info .inner span.family-menu { width:84rem; display:flex; align-items:center; justify-content:space-between; flex-wrap:wrap;border-right:1px solid rgba(255,255,255,.2)}
 header .head-info .inner span.family-menu a {flex:1; color:#fff; text-align:center; width:28rem; height:4.6rem; line-height:4.6rem; font-size:1.6rem; border-left:1px solid rgba(255,255,255,.2)}
 header .head-info .inner span.family-menu a:hover {background:#a50034;}
 header .head-info .inner span.admin-menu a { color:#fff; width:7.4rem; height: 3rem; line-height:3rem; text-align:center; border-radius:.6rem; border:solid 1px #fff;}
@@ -149,7 +149,7 @@ header nav .depth01 {display:flex; flex-wrap:wrap; justify-content:flex-start; h
 header nav .depth01.off > li > .depth02 {overflow: hidden;} 
 header nav .depth01 > li > a {display:block; height:4rem; line-height:4rem; padding:0 1.4rem; font-size:1.6rem; font-weight:600; position:relative; text-align:center;} 
 header nav .depth01>li>a:hover {color:#a50034;}
-header nav .depth02 {display: none; position:absolute; z-index:11; top:5.2rem; left:0; height:23rem; width:14.4rem; padding:0 2.8rem; box-sizing: initial;  } 
+header nav .depth02 {display:none; position:absolute; z-index:11; top:5.2rem; left:0; height:23rem; width:14.4rem; padding:0 2.8rem; box-sizing: initial;  } 
 header nav .depth02 .depth01-m {display:block; font-size:1.6rem; font-weight:800; line-height: 1.25; margin:2rem 0 0; padding-bottom:3.8rem; border-right:1px solid #e4e4eb;}
 header nav .depth02 .depth01-m strong {display:block; padding-top:.9rem;}
 header nav .depth01 ul {height: 16.5rem;border-right:1px solid #e4e4eb;}
@@ -339,5 +339,7 @@ footer {height:3.8rem; margin-top: auto; line-height:3.8rem; background:#f7f7fa;
     *::-ms-backdrop, .swiper-button-wrap {position:absolute; top:-2rem;} 
     *::-ms-backdrop, .video-watching .in-box .text-wrap > p {height:5rem; }
     *::-ms-backdrop, [class*="thumb-case"] .cont-area p { height:5rem; }
-    *::-ms-backdrop, .tagSwiper .swiper-button-next {  top:-.5rem}
-}
+    *::-ms-backdrop, .tagSwiper .swiper-button-next { top:-.5rem }
+    *::-ms-backdrop, .tagSwiper .swiper-button-prev { top:-.5rem }
+    *::-ms-backdrop, header nav .depth02 .depth01-m {width: 144px;} 
+    *::-ms-backdrop, header nav .depth01 ul { width: 144px;} 
